Fixed broken styles

--- a/css/app.css
+++ b/css/app.css
@@ -73,10 +73,9 @@ html, body {
     display: block;
     color: #2C3E50;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: capitalize;
+    text-transform: none;
     font-weight: 300;
     font-size: 11pt;
-
 }
 
 .liveProjects
